kube/spider.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spider
  namespace: spider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spider
  template:
    metadata:
      labels:
        app: spider
    spec:
      containers:
      - name: spiderkeeper
        image: stoicperlman/spiderkeeper
        ports:
        - containerPort: 5000
      - name: scrapyd
        image: stoicperlman/scrapyd
        ports:
        - containerPort: 6800
        livenessProbe:
          httpGet:
            path: /daemonstatus.json
            port: 6800
          initialDelaySeconds: 5
          periodSeconds: 5
